--- a/git-practice/sergio_salinas/index.html
+++ b/git-practice/sergio_salinas/index.html
@@ -4,10 +4,8 @@
     <title>Hola mundo </title>
 </head>
 <body>
-    <p>
-        Hola esta es mi primera pagina
-    </p>
-
+     <hi>Sergio</hi>
+      <script src="codigo.js "></script>
 </body>
     
 </html>
