Add http-server so Arkanoid can run using localhost:8080 via browser

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Arkanoid!</title>
-    <script src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
