--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Simple ARkanoid Game</title>
         <meta charset="UTF-8" />
         <link href="https://fonts.googleapis.com/css?family=Saira+Stencil+One&display=swap" rel="stylesheet">
+        <script type="module" src="src/index.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body onmousemove="getCoor(event)"> 
