--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <script src="src/levels.js"></script>
         <script src="src/levelGenerator.js"></script>
         <script src="src/sound.js"></script>
-        <script src="src/game.js"></script>
+        <script src="src/ball.js" ></script>
+        <script src="src/stick.js" ></script>
+        <script src="src/game.js" type="module"></script>
         <script src="src/box.js"></script>
     </body>
 </html>
